--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.5
-pandas==2.1.1
-matplotlib==3.8.1
-seaborn==0.12.3
-openpyxl==3.1.3
-xlrd==2.0.1
+Flask
+pandas
+matplotlib
+seaborn
+openpyxl
+
+
